# Mixed_Precision_Multigrid_Solvers_for_PDEs

./: .dockerignore  ADVANCED_VISUALIZATIONS_SUMMARY.md  Dockerfile  FINAL_GAP_FILLING_REPORT.md  FINAL_PROJECT_STATUS.md  GPU_ACCELERATION_REPORT.md  PHASE4_GPU_ACCELERATION.md  PROJECT_COMPLETION_SUMMARY.md  PR_DESCRIPTION.md  README.md  REALTIME_DASHBOARD_SUMMARY.md  VALIDATION_TEST_SUITE_COMPLETION_REPORT.md  docker-compose.yml  final_fixes.sh  final_integration_test.py  generate_plots.py  interactive_demo.py  interactive_plots_backup.py  pyproject.toml  requirements.txt  run_benchmarks.py  setup.py  test_advanced_visualizations.py  test_gpu.py  test_realtime_dashboard.py  test_solver_dashboard_function.py  validation_report_20250825_001337.txt  validation_results_20250825_001337.json  verify_project.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_report_20250823_173802.md  benchmark_results_20250823_173802.json
config/: __init__.py  settings.py  solver_config.yaml
docker/: README.md  build.sh  docker-compose.override.yml  docker-compose.yml  init-db.sql  prometheus.yml  requirements-dev.txt  requirements-gpu.txt
docs/: ADVANCED_VISUALIZATIONS.md  Gemfile  INSTALLATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  REALTIME_DASHBOARD.md  TROUBLESHOOTING.md  _config.yml  about.md  conclusion.md  contact.md  generate_mathematical_diagrams.py  index.md  math_test.md  mathematical_examples.md  methodology.md  results.md  validate_mathematical_content.py
docs/_data/: benchmarks.yml  nav.yml
docs/_includes/: mathjax.html  nav.html
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: modules.rst  multigrid.rst
examples/: 01_basic_poisson_tutorial.ipynb  02_heat_equation_simulation.ipynb  03_gpu_acceleration_demo.ipynb  04_mixed_precision_analysis.ipynb  06_advanced_features_and_optimization.ipynb  advanced_visualizations_demo.py  basic_poisson.py  corrected_poisson_example.py  gpu_acceleration_demo.py  gpu_acceleration_example.py  phase2_solver_comparison.py  realtime_dashboard_demo.py  validation_test_suite_example.py
examples/notebooks/: 01_Getting_Started.ipynb
profiling/: performance_profiler.py
scripts/: release_management.py  verify_installation.py
src/multigrid/: __init__.py  _version.py
src/multigrid/analysis/: __init__.py  convergence.py
src/multigrid/applications/: __init__.py  comprehensive_validation.py  convergence_analysis.py  heat_equation.py  heat_solver.py  integration_tests.py  mixed_precision_analysis.py  performance_analysis.py  poisson_solver.py  test_problems.py  validation.py
src/multigrid/benchmarking/: __init__.py  performance_profiler.py
src/multigrid/benchmarks/: __init__.py  performance_benchmark.py  validation_suite.py
src/multigrid/boundary_conditions/: advanced_bc.py
src/multigrid/core/: __init__.py  grid.py  precision.py
src/multigrid/gpu/: __init__.py  cuda_kernels.py  gpu_benchmark.py  gpu_precision.py  gpu_profiler.py  gpu_solver.py  memory_manager.py  multi_gpu.py  multi_gpu_solver.py
src/multigrid/operators/: __init__.py  base.py  laplacian.py  transfer.py
src/multigrid/optimization/: __init__.py  cache_optimization.py  memory_management.py
src/multigrid/preconditioning/: __init__.py  base.py  diagonal.py  ilu.py  multigrid_preconditioner.py
src/multigrid/solvers/: __init__.py  advanced_multigrid.py  base.py  corrected_multigrid.py  iterative.py  multigrid.py  smoothers.py
src/multigrid/utils/: __init__.py  logging_utils.py  performance.py
src/multigrid/validation/: convergence_analysis.py  mms_validation.py  performance_baselines.py  simple_validation.py
src/multigrid/visualization/: __init__.py  advanced_visualizations.py  analysis_plots.py  convergence_plots.py  grid_visualization.py  interactive_plots.py  performance_plots.py  realtime_dashboard.py  solution_plots.py
tests/: __init__.py
tests/integration/: test_end_to_end.py  test_performance_regression.py  test_platform_compatibility.py
tests/unit/: __init__.py  test_advanced_multigrid.py  test_gpu_acceleration.py  test_grid.py  test_iterative_solvers.py  test_operators.py  test_precision.py  test_preconditioning.py
